--- a/LoanManager/LoanManager/LoanManager.csproj
+++ b/LoanManager/LoanManager/LoanManager.csproj
@@ -50,6 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AmortizationSchedule.cs" />
+    <Compile Include="CalculatorWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CalculatorWindow.Designer.cs">
+      <DependentUpon>CalculatorWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Loan.cs" />
     <Compile Include="LoanPayment.cs" />
     <Compile Include="MainWindow.cs">
@@ -61,6 +67,12 @@
     <Compile Include="Profile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CalculatorWindow.resx">
+      <DependentUpon>CalculatorWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainWindow.resx">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
